# NER-studies

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: 01_BiLSTM_model.ipynb  NER-studies.ipynb
src/: crflayer.py  get_data.sh  nermodel.py
