[tool.poetry]
name = "ner-analysis"
version = "0.1.0"
description = "This project uses tensorflow to study NER with BiLSTMs, CRFs and Viter"
authors = ["Pedro-A-D-S <pedroalves0409@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["CHANGELOG.md"]
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = "3.8.18"
tensorflow = "2.4.0"
pandas = "1.0.1"
numpy = "1.19.2"
tensorflow-datasets = "3.2.1"
protobuf = "3.20.0"
tensorflow-addons = "0.11.2"
matplotlib = "3.1.3"
pre-commit = "3.5.0"
isort = "5.12.0"
pip-shims = "<=0.3.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
